V100_results/results/nqueen/sycl.log
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -O3 -O3 -c main.cpp -o main.o
main.cpp:159:20: error: use of undeclared identifier 'ceil'; did you mean 'sycl::ceil'?
  159 |   int num_blocks = ceil((double)n_explorers/_QUEENS_BLOCK_SIZE_);
      |                    ^~~~
      |                    sycl::ceil
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/builtins/math_functions.inc:133:23: note: 'sycl::ceil' declared here
  133 | BUILTIN_GENF(ONE_ARG, ceil)
      |                       ^
1 error generated.
make: *** [Makefile:71: main.o] Error 1
